fix(ui): uf collapsed state

--- a/source/containers/UniversalFilters/styles.m.css
+++ b/source/containers/UniversalFilters/styles.m.css
@@ -1,21 +1,3 @@
 .filters {
-    background: lightgreen;
-    position: fixed;
-    width: calc(100% - 256px);
-    z-index: 1100;
-    margin: 160px 0 0 0;
-
-    display: flex;
-    position: fixed;
-    flex-direction: column;
-    justify-content: space-between;
-    overflow: initial;
-    min-height: 60px;
-    transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 10px,
-        rgba(0, 0, 0, 0.23) 0px 3px 10px;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    box-sizing: border-box;
-    background-color: rgb(255, 255, 255);
-    padding: 16px;
+    background: #fafafa;
 }
